# Enterprise-Agentic-Rag

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  scratch_profile.py  test_models.py  timing_profile.py
.streamlit/: config.toml
config/: settings.py
data/: bm25_index.pkl
data/sample_docs/: novatech_annual_report_2024.md  novatech_cortex_faq.md  novatech_product_metrics.csv
scripts/: chat.py  embed_and_store.py  evaluate.py  ingest.py  query.py  retrieve.py
src/: __init__.py
src/embeddings/: __init__.py
src/evaluation/: evaluator.py
src/frontend/: app.py  styles.py
src/ingestion/: __init__.py  chunker.py  metadata.py  parser.py  pipeline.py
src/retrieval/: __init__.py  bm25.py  reranker.py
src/router/: agent.py  semantic_cache.py  sql_db.py  tools.py
src/vectorstore/: __init__.py
tests/: __init__.py  test_evaluation.py  test_ingestion.py  test_retrieval.py  test_router.py  test_vectorstore.py
