[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Advanced Enterprise-Grade RAG System with Agentic Routing, Hybrid Search, and Semantic Chunking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # --- Core LangChain Stack ---
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-experimental>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-huggingface>=0.1.0",

    # --- Document Parsing ---
    "unstructured[all-docs]>=0.16.0",

    # --- Embeddings (local fallback) ---
    "sentence-transformers>=3.0.0",

    # --- Configuration & Utilities ---
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",            # Beautiful terminal output

    # --- Vector Database ---
    "qdrant-client>=1.9.0",
    "langchain-qdrant>=0.2.0",

    # --- Keyword Search & Re-ranking ---
    "rank-bm25>=0.2.2",

    # --- UI & Frontend ---
    "streamlit>=1.35.0",

    # --- Data Handling ---
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]

# Future steps will add these:
# search = ["rank-bm25>=0.2", "cohere>=5.0"]
# agents = ["langgraph>=0.2", "tavily-python>=0.3"]
# eval = ["ragas>=0.1"]
# frontend = ["streamlit>=1.35"]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
